feat: add docker build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,6 @@ jobs:
 
       - name: Test
         run: pnpm test
+
+      - name: Build docker Image
+        run: docker build -t ci_cd_studies_image .
