--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Verificar arquivos após build
+        run: ls -la
+
       - name: Generate tag
         id: generate_tag
         run: |
@@ -47,7 +50,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/ci_cd_studies_image:${{ steps.generate_tag.outputs.sha }},${{ vars.DOCKERHUB_USERNAME }}/ci_cd_studies_image:latest
